# dolfin

./: LICENSE  README.md  pyproject.toml
dolfin/: main.py
dolfin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
