
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dolfin"
version = "0.2.0"
description = "dolfin is a file encryptor."
authors = [{name = "potatoBrain07"}]
requires-python = ">=3.8"
dependencies = ["cryptography"]

[project.scripts]
dolfin = "dolfin.main:main"
